data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4490.wast
;; 9. **Test Description**: Create a test where `call_indirect` references a function with special types like `i64` for a `f32` function and checks for correct trapping on the type mismatch.    - **Constraint Checked**: Operand and return types conformity.    - **Relation to Improper Handling**: Ensures function calls match the expected specialized operand types.

(assert_invalid
  (module
    (type (func (param f32) (result i64)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (param i32) (result f32)
      (f32.const 0.0)
    )
    (func (param i32) (call_indirect (type 0) (local.get 0)))
  )
  "type mismatch"
)